styles/navbar.css
nav {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    bottom: 0%;
    width: 100%;
    height: 150px;
    z-index: 1000;
    transition: 0.3s;
}

nav.sticky {
    pointer-events: none;
    transform: translateY(-25px);
    opacity: 0;
}

.nav-middle {
    display: flex;
    align-items: center;
}

.nav-links {
    background-color: white;
    display: flex;
    overflow: hidden;
    border: 3px solid #f4f4f4;
    border-radius: 100px;
    box-shadow: 0 24px 80px rgba(27, 27, 27, .1);
}

.nav-links a {
    color: #8b8b8b;
    display: flex;
    align-items: center;
    gap: 15px;
    padding: 25px 50px;
    font-size: 14px;
    font-weight: 500;
    transition: 0.3s;
}

.nav-links a:not(:nth-child(1)) {
    border-left: 1.5px solid #eee;
}

.nav-links a span {
    color: #8b8b8b;
}

.nav-links a:hover {
    background: rgb(234, 234, 234);
    padding: 25px 60px;
}

#toggle:hover {
    background: rgb(234, 234, 234);
}

#toggle {
    cursor: pointer;
    display: none;
    background-color: white;
    border: 3px solid #f4f4f4;
    border-radius: 50%;
    box-shadow: 0 24px 80px rgba(27, 27, 27, .1);
    font-size: 25px;
    padding: 20px;
    transition: 0.3s;
    position: relative;
    z-index: 1001;
}

